--- a/styles/style.css
+++ b/styles/style.css
@@ -126,15 +126,13 @@
 .staff__cards
 {
   max-width: 760px;
-  margin:auto;
+  margin:68px auto 0 auto;
   display:flex;
   flex-wrap:wrap;
   justify-content: space-between;
   gap: 40px;
   list-style-type: none;
   padding-left: 0;
-  margin-top: 68px;
-  margin-bottom: 0;
 }
 
 .card {
