--- a/styles/style.css
+++ b/styles/style.css
@@ -129,7 +129,7 @@
   margin:68px auto 0 auto;
   display:flex;
   flex-wrap:wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
   gap: 40px;
   list-style-type: none;
   padding-left: 0;
