--- a/styles/style.css
+++ b/styles/style.css
@@ -129,8 +129,8 @@
   margin:68px auto 0 auto;
   display:flex;
   flex-wrap:wrap;
-  justify-content: space-between;
   gap: 40px;
+  justify-content: center;
   list-style-type: none;
   padding-left: 0;
 }
