--- a/styles/style.css
+++ b/styles/style.css
@@ -332,22 +332,22 @@
   margin: 0;
 }
 
-.step__one {
+.step_one {
   width: 100%;
   max-width: 220px;
 }
 
-.step__two {
+.step_two {
   width: 100%;
   max-width: 220px;
 }
 
-.step__three {
+.step_three {
   width: 100%;
   min-width: 220px;
 }
 
-.step__four {
+.step_four {
   width: 100%;
   max-width: 220px;
 }
