--- a/styles/style.css
+++ b/styles/style.css
@@ -326,7 +326,7 @@
 }
 
 .step {
-  flex-basis: fit-content;
+  flex-basis: content;
   flex-grow: 0;
   flex-shrink: 0;
   margin: 0;
@@ -372,6 +372,7 @@
 .footer {
   box-sizing: border-box;
   background-color: #1f1f1f;
+  color: white;
   padding: 60px 80px;
 }
 
@@ -381,12 +382,10 @@
 }
 
 .footer__column_content_hours {
-  color: white;
   margin-left: auto;
 }
 
 .footer__column_content_social {
-  color: white;
   margin-left: 80px;
 }
 
@@ -396,7 +395,7 @@
 }
 
 .footer__column-heading {
-  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .footer__list {
@@ -412,15 +411,17 @@
 .footer__column-link {
   color: white;
   text-decoration: none;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  column-gap: 10px;
 }
 
 .footer__social-icon {
   width: 16px;
   height: 16px;
-  margin-right: 10px;
 }
 
 .footer__copyright {
   margin-top: 100px;
-  color: white;
 }
