--- a/styles/style.css
+++ b/styles/style.css
@@ -326,7 +326,7 @@
 }
 
 .step {
-  flex-basis: content;
+  flex-basis: 220px;
   flex-grow: 0;
   flex-shrink: 0;
   margin: 0;
@@ -413,7 +413,7 @@
   text-decoration: none;
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
+  align-items: center;
   column-gap: 10px;
 }
 
